# RM_SS13_CTC_Ashfaq_Tahir

./: .gitignore  README  README.md  repository.debs  repository.rosinstall
hbrs_perception/hbrs_object_categorization/: .gitignore  CMakeLists.txt  loggerCfg.txt  manifest.xml
hbrs_perception/hbrs_object_categorization/common/NeuralGas/: CMakeLists.txt
hbrs_perception/hbrs_object_categorization/common/NeuralGas/include/: CKeyPointService_OpenSurf.h
hbrs_perception/hbrs_object_categorization/common/NeuralGas/src/: CKeyPoint.cpp  CKeyPointService_OpenSurf.cpp  CToolBoxNG.cpp
hbrs_perception/hbrs_object_categorization/common/SparseAutoEncoder/: loggerCfg.txt
hbrs_perception/hbrs_object_categorization/common/SparseAutoEncoder/include/: CAutoEncoder.h  CFileSettings.h  CLayer.h  CLogger.h  CNeuralNetwork.h  CNeuron.h  CStackedAutoEncoder.h
hbrs_perception/hbrs_object_categorization/common/SparseAutoEncoder/src/: CAutoEncoder.cpp  CFileSettings.cpp  CLayer.cpp  CLogger.cpp  CNeuralNetwork.cpp  CNeuron.cpp  CSAEToolBox.cpp  CStackedAutoEncoder.cpp
hbrs_perception/hbrs_object_categorization/common/include/: CDensityEstimation.h  CFileSettings.h  CKde.h  CLogger.h  CObjectCategorizationGeometric.h  CObjectDecomposition.h  CObjectGeometricService.h  CObjectPoseNormalization.hpp  CObjectPseudoCategorizationGeometric.h  SObjectDescription.h
hbrs_perception/hbrs_object_categorization/common/include/ProbNeuralNetwork/: CHPNeuralNetwork.h  CKNNClassifier.h  CPNeuralNetwork.h  CPNeuralNetworkT.h  CRTPNeuralNetwork.h  CRTPNeuralNetworkEnsemble.h
hbrs_perception/hbrs_object_categorization/common/src/: CDensityEstimation.cpp  CFileSettings.cpp  CLogger.cpp  CObjectCategorizationGeometric.cpp  CObjectDecomposition.cpp  CObjectGeometricService.cpp  CObjectPoseNormalization.cpp  CObjectPseudoCategorizationGeometric.cpp  CPca.cpp
hbrs_perception/hbrs_object_categorization/common/src/ProbNeuralNetwork/: CHPNeuralNetwork.cpp  CKNNClassifier.cpp  CPNeuralNetwork.cpp  CPNeuralNetworkT.cpp  CRTPNeuralNetwork.cpp  CRTPNeuralNetworkEnsemble.cpp
hbrs_perception/hbrs_object_categorization/common/src/Svm/: CBSvmClassifier.cpp  CBSvmClassifier.h  CSvmCascade.cpp  CSvmCascade.h  CSvmClassifier.cpp  CSvmClassifier.h  CSvmOneClassClassifier.cpp  CSvmOneClassClassifier.h  CSvmOneVsOne.cpp  CSvmOneVsOne.h  svm.cpp
hbrs_perception/hbrs_object_categorization/data/rtpnnEnsemble/: README.txt
hbrs_perception/hbrs_object_categorization/ros/include/: struct_planar_surface.h  toolbox_ros.h
hbrs_perception/hbrs_object_categorization/ros/launch/: object_categorization_geometric.launch
hbrs_perception/hbrs_object_categorization/ros/nodes/: object_categorization_geometric_node.cpp
hbrs_perception/hbrs_object_categorization/ros/src/: toolbox_ros.cpp
hbrs_perception/hbrs_object_categorization/ros/tools/: convert_models_from_text_to_binary.cpp  training_object_categorization_geometric_node.cpp
hbrs_perception/hbrs_object_categorization/srv/: GetObjectCategoryGeometricList3D.srv
hbrs_perception/hbrs_perception_tests/: .gitignore  CMakeLists.txt  manifest.xml
hbrs_perception/hbrs_perception_tests/cfg/: PlaneExtractionTest.cfg
hbrs_perception/hbrs_perception_tests/include/: offline_test_base.hpp  reconfigurable_plane_extraction.hpp  test_base.hpp
hbrs_perception/hbrs_perception_tests/src/: offline_plane_extraction_test.cpp  online_plane_extraction_test.cpp  plane_extraction_test.cpp
hbrs_perception/hbrs_scene_segmentation/: CMakeLists.txt  manifest.xml
hbrs_perception/hbrs_scene_segmentation/common/include/: aliases.h  bounding_box.h  cloud_accumulation.h  object_clustering.h  plane_extraction.h
hbrs_perception/hbrs_scene_segmentation/common/include/impl/: bounding_box.hpp
hbrs_perception/hbrs_scene_segmentation/common/src/: cloud_accumulation.cpp  object_clustering.cpp  plane_extraction.cpp  polyclipping.cpp
hbrs_perception/hbrs_scene_segmentation/ros/include/: conversions.h  helpers.hpp
hbrs_perception/hbrs_scene_segmentation/ros/launch/: scene_segmentation.launch
hbrs_perception/hbrs_scene_segmentation/ros/nodes/: bounding_box_maker_node.cpp  tabletop_cloud_accumulator_node.cpp  tabletop_cloud_clusterer_node.cpp  workspace_finder_node.cpp
hbrs_perception/hbrs_scene_segmentation/ros/scripts/: calibrate_workspace_finder.py
hbrs_perception/hbrs_scene_segmentation/ros/src/: bounding_box_maker_node.cpp  tabletop_cloud_accumulator_node.cpp  tabletop_cloud_clusterer_node.cpp  workspace_finder_node.cpp
hbrs_perception/hbrs_sound_localization/: CMakeLists.txt  Readme.txt  manifest.xml
hbrs_perception/hbrs_sound_localization/common/data/: ls_data_ori_44100.txt
hbrs_perception/hbrs_sound_localization/common/include/: Localize_alg.h  fe_class.h  grid_base_fe.h  grid_base_localize1.h  jin_record_ori_backup.h  jin_record_paper.h  nr_algorithm1.h  overlapadd2.h  paper_sr_nr.h  segment2.h  speech_reco_paper.h  vad_jin2.h
hbrs_perception/hbrs_sound_localization/common/src/: ice_main.cpp
hbrs_perception/hbrs_sound_localization/ros/launch/: tf_to_microphone_array.launch
hbrs_perception/hbrs_sound_localization/ros/nodes/: ros_t2.cpp  ros_t2_service.cpp
hbrs_perception/hbrs_text_extraction/tie/: CMakeLists.txt
hbrs_perception/hbrs_text_extraction/tie/active-tie/: AcquisitionParametersOptimization.cpp  AcquisitionParametersOptimization.hpp  ActiveCamera.cpp  ActiveCamera.hpp  ActiveCameraValues.cpp  ActiveCameraValues.hpp  CMakeLists.txt  Gradients.cpp  Gradients.hpp  ImagePreprocessing.cpp  ImagePreprocessing.hpp  Integrals.cpp  Integrals.hpp  OCRInterface.cpp  OCRInterface.hpp  OVActiveCamera.cpp  OVActiveCamera.hpp  SharpnessMeasures.cpp  SharpnessMeasures.hpp  SonyDFWVL500Values.cpp  SonyDFWVL500Values.hpp
hbrs_perception/hbrs_text_extraction/tie/atie-old/: CCBasedTIE.cpp  CCBasedTIE.hpp  CCClassification.cpp  CCClassification.hpp  CMakeLists.txt  ComplexMoments.cpp  ComplexMoments.hpp  FeatureExtractors.cpp  FeatureExtractors.hpp  chenNiblackBinarization.cpp  chenNiblackBinarization.hpp  main.cpp  parameters.cpp  parameters.hpp  util.cpp  util.hpp
(+218 files in other folders)
